# mlops-e2e-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.fastapi  Dockerfile.mlflow  README.md  docker-compose.yaml  load_data.py  main.py  pyproject.toml
airflow/: simple_auth_manager_passwords.json.generated
airflow/config/: airflow.cfg
airflow/dags/: ml_pipeline_dag.py
data/bronze/: ml2_student_performance.csv
data/gold/: test_ml2_students_data.csv  train_ml2_students_data.csv
data/silver/: preprocessed_ml2_student_performance.csv
docker/: Dockerfile
docs/: architecture.md  data_dictionary.md  dataset.md  drift_plan.md
mlruns/.trash/815064030373702495/: meta.yaml
mlruns/0/: meta.yaml
mlruns/0/00e1c1db66114b27a9f6dbb8837cb8e3/: meta.yaml
mlruns/0/02729b0832e342f4bceca5a64b1e4322/: meta.yaml
mlruns/0/0353fd7b8df941aa9d65d029c899d85a/: meta.yaml
mlruns/0/0416eb8975674bb0af88f88bc47f8c5d/: meta.yaml
mlruns/0/04b25a2a948e4d21b34cfc8eb9a10f3e/: meta.yaml
mlruns/0/066272d7d3014b11956d0a9898f821f7/: meta.yaml
mlruns/0/085e4345912c47f49041e81bac47dd3f/: meta.yaml
mlruns/632097907083886906/: meta.yaml
mlruns/815064030373702495/: meta.yaml
models/: model.pkl
models/01.preprocessing/: preprocess_data.py
models/03.training/: training.py
models/04.evaluation/: evaluation.py
notebooks/: 01_load_data.ipynb  02_eda.ipynb  03_preprocessing.ipynb
reports/: metrics.txt
src/: data_ingestion.py  drift_detection.py  run_pipeline.py
src/02.feature_engineering/: split_data.py
src/03.training/: training.py
src/04.evaluation/: evaluation.py
src/evaluation/: evaluation.py
src/feature_engineering/: split_data.py
src/load_data/: load_data.py
src/preprocessing/: preprocess_data.py
src/serve/: app.py
src/training/: training.py  training_hyperopt.py  training_mlflow.py
src/utils/: logger.py
(+19297 files in other folders)
