[project]
name = "72b86e078843edb3752c88bdd311e512da2f7d46f9f8aef109f4b9f55c54984d-homework1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.0.3",
    "gdown>=5.2.0",
    "imblearn>=0.0",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
