[project]
name = "72b86e078843edb3752c88bdd311e512da2f7d46f9f8aef109f4b9f55c54984d-homework1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.0.3",
    "evidently==0.7.11",
    "fastapi>=0.116.1",
    "gdown>=5.2.0",
    "hyperopt>=0.2.7",
    "imbalanced-learn>=0.12.4",
    "imblearn>=0.0",
    "joblib>=1.5.1",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.3",
    "mlflow==3.1.4",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "psycopg2-binary==2.9.10",
    "pydantic>=2.11.7",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "tqdm",
    "uv>=0.8.13",
    "uvicorn>=0.35.0",
]
